@@ -2,6 +2,8 @@ v0.0.0.4 -
 	
 	+ "Major Overhaul Edition"
 	
+	+ Added a primitive version of CD/CHDIR.
+	
 	+ Allowed built-in commands to be referenced through the 'help' command.
 	
 	+ 'Italic' command added.
